<?xml version="1.0"?>
<package format="3">
  <name>simple_drive_control</name>
  <version>0.0.1</version>
  <description>Let the car drive some centimeters in some direction.</description>
  <maintainer email="daniel.neumann@fu-berlin.de">Daniel Neumann</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>
